@@ -21,6 +21,7 @@ Changelog for CinemaVision
 - fix:     Issue #116 - Error when saving a sequence
 - change:  Better handling of read/write falures and errors to help troubleshooting - Issue #95
 - fix:     Issue #117 - Conditional sequences failing to match genre
+- add:     Update settings for service add-on
 
 [- 1.0.13 -]
 
